--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Build and Release Folders
-bin-debug/
+
 bin-release/
-[Oo]bj/
-[Bb]in/
+obj/
+*.tlog/
+*.obj
+*.idb
 
 # Other files and folders
 .settings/
@@ -13,6 +15,4 @@ bin-release/
 *.ipa
 *.apk
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+
