--- a/AdpcmG721/AdpcmG721.csproj
+++ b/AdpcmG721/AdpcmG721.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdpcmG721.cs" />
+    <Compile Include="demo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WavHelper.cs" />
